Some fix css in pages

--- a/Notion.Client/Pages/Authentication/Registration.cshtml
+++ b/Notion.Client/Pages/Authentication/Registration.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Notion.Client.Pages.Authentication.RegistrationModel
 
-<link href="css/LoginStyle.css" rel="stylesheet" />
+<link href="../css/LoginStyle.css" rel="stylesheet" />
 
 <h3>Registration</h3>
 
