--- a/Notion.Client/Pages/Authentication/Login.cshtml
+++ b/Notion.Client/Pages/Authentication/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Notion.Client.Pages.Authentication.LoginModel
 
-<link href="css/LoginStyle.css" rel="stylesheet" />
+<link href="../css/LoginStyle.css" rel="stylesheet" />
 
 <h3>Login</h3>
 
